# nmai

./: .gitignore  README.md
accounting/: Dockerfile  agent.py  agent_planned.py  check_tasks.py  main.py  prompts.py  prompts_v2.py  pyproject.toml  requirements.txt  results_log.json  submit.py  task_handlers.py  tripletex.py
accounting/handlers/: __init__.py  _detection.py  _helpers.py  _schemas.py  bank_reconciliation.py  credit_note.py  customer_invoice.py  employee.py  ledger_analysis.py  project_lifecycle.py  salary.py  supplier_invoice.py  travel_expense.py  voucher_correction.py  year_end_closing.py
accounting/task_results/failed/: 2026-03-21T194119_Recebemos_a_fatura_INV-2026-7230_do_fornecedor_Solmar_Lda_org._nº_973188410_no.json  2026-03-21T194130_Wir_haben_die_Rechnung_INV-2026-2118_vom_Lieferanten_Brückentor_GmbH_Org.-Nr._9.json  2026-03-21T194442_Voce_recebeu_um_contrato_de_trabalho_ver_PDF_anexo._Crie_o_funcionario_no_Trip.json  2026-03-21T194624_Registe_uma_despesa_de_viagem_para_Maria_Martins_maria.martinsexample.org_ref.json  2026-03-21T210213_Crie_e_envie_uma_fatura_ao_cliente_Porto_Alegre_Lda_org._nº_826870192_por_2270.json
accounting/task_results/success/: 2026-03-21T210157_Créez_une_facture_pour_le_client_Colline_SARL_nº_org._942447647_avec_trois_lig.json  2026-03-21T223636_Erstellen_Sie_drei_Abteilungen_in_Tripletex_Administrasjon_IT_und_HR..json  2026-03-21T223759_Die_Gesamtkosten_sind_von_Januar_bis_Februar_2026_deutlich_gestiegen._Analysiere.json  2026-03-21T223950_Effectuez_la_clôture_annuelle_simplifiée_pour_2025__1_Calculez_et_comptabilise.json
ai-accounting-agent/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  mcp_accountant.json  opencode.json  pyproject.toml  server.json  submit.py  submit.sh  test_agent.py  test_agent_schema.py  test_models.py
ai-accounting-agent/ai-accountant-mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.json
ai-accounting-agent/ai-accountant-mcp/src/ai_accountant_mcp/: __init__.py  server.py
ai-accounting-agent/docs/: Endpoint Spec.md  Examples.md  Overview.md  Sandbox Account.md  Scoring.md
ai-accounting-agent/src/: main.py
ai-accounting-agent/src/ai_accounting_agent/: __init__.py  coordinator.py  embeddings.py  file_processor.py  http_server.py  llm.py  main.py  openapi_tools.py  planner.py  prompts.py  rag_integration_example.py  rag_tool_filter.py  rag_tool_manager.py  task_splitter.py  tripletex_client.py
astarIsland/: .env  .env.example  Makefile  backtest_results.txt  deploy_and_run.sh  main.py  pyproject.toml  solve.py
astarIsland/task/: apiendpoints  overview  quickstart  scoring  simulation
computervision/: Makefile  build_submission.py  compare_runs.py  export_onnx.py  predict.py  prepare_classifier_dataset.py  prepare_yolo_dataset.py  requirements.txt  resume.py  run.py  train_classifier.py  train_parallel.sh  train_yolo.py
detection/: .gitignore  AGENTS.md  Makefile  README.md  opencode.json
detection/configs/: dataset.yaml
detection/docs/: Overview.md
detection/scripts/: coco_to_yolo.py  evaluate.py  export_onnx.py  package_submission.py  push_to_hf.sh  run.py  train.py  validate_predictions.py
norgesGruppen/: CLAUDE.md
norgesGruppen/.claude/skills/: evaluate.md  improve.md  runpy-check.md  submit.md  train.md
norgesGruppen/samapproach/: config.py  pyproject.toml  run_pipeline.py  step1_segment.py  step2_squares.py  step3_embed_products.py  step4_match.py
norgesGruppen/training/: Makefile  evaluate.py  package.py  prepare_crops.py  prepare_dataset.py  prepare_tiled_dataset.py  pyproject.toml  requirements.txt  run.py  train.py  train_classifier.py  train_yolo11.py  visualize.py
norgesGruppen/v2/: Makefile  balance_dataset.py  evaluate.py  launch_experiments.py  prepare_dataset.py  run.py  train.py  train_ddp.py  train_single.py
sam/: Makefile  build_submission.py  export_sam3.py  generate_sam3_labels.py  prepare_data.py  run.py  setup_vm.sh  train_classifier.py
