[project]
name = "accounting-agent"
version = "0.1.0"
description = "AI accounting agent for Tripletex - NM i AI competition"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "anthropic>=0.52.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
